--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Verba</string>
     <string name="wordToFindHint">Enter a word to find</string>
     <string name="lookupButtonLabel">Search</string>
+    <item type="string" name="databaseVersion" format="integer">0</item>
 
 </resources>
