--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -2,8 +2,23 @@
 <resources>
 
     <string name="app_name">Verba</string>
+    <string name="openDictionaryButtonLabel">Dictionary</string>
+    <string name="openCardSetsViewerButtonLabel">Cards viewer</string>
     <string name="wordToFindHint">Enter a word to find</string>
     <string name="lookupButtonLabel">Search</string>
+    <string name="saveCardButtonLabel">Save</string>
+    <string name="addCardSetButtonLabel">  +  </string>
+    <string name="addCardSetDialogLabel">Create new card set</string>
+    <string name="pickCardSetLabel">Choose Card Set To View</string>
+    <string name="pickCardLabel">Choose Card To View</string>
+    <string name="cardSetNameHint">Enter card set name</string>
+    <string name="doAddCardSetNameButtonLabel">Save</string>
+    <string name="validationEmptyCardSetName">Card set name should not be empty</string>
+    <string name="validationNoCardSetSelected">Please choose a card set</string>
+    <string name="validationNoCardFound">Card has not been found</string>
+    <string name="cardSetAdded">A new card set has been created</string>
+    <string name="cardAddedToCardSet">A new card has been created</string>
+
     <item type="string" name="databaseVersion" format="integer">1</item>
 
 </resources>
