Menu fixed at the bottom, hightlighting of selected list otem

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -13,11 +13,16 @@
     <string name="pickCardLabel">Choose Card To View</string>
     <string name="cardSetNameHint">Enter card set name</string>
     <string name="doAddCardSetNameButtonLabel">Save</string>
+    <string name="cardSetAdded">A new card set has been created</string>
+    <string name="cardAddedToCardSet">A new card has been created</string>
+    
     <string name="validationEmptyCardSetName">Card set name should not be empty</string>
     <string name="validationNoCardSetSelected">Please choose a card set</string>
     <string name="validationNoCardFound">Card has not been found</string>
-    <string name="cardSetAdded">A new card set has been created</string>
-    <string name="cardAddedToCardSet">A new card has been created</string>
+    <string name="validationNoPhraseDefinitionCoordinatesFound">Nothing found in the dictionary</string>
+    
+    <string name="editCardSetMenuItemTitle">Edit</string>
+    <string name="deleteCardSetMenuItemTitle">Delete</string>
 
     <item type="string" name="databaseVersion" format="integer">1</item>
 
